[build-system]
requires = [
    "setuptools>=61.0"
    ]

build-backend = "setuptools.build_meta"

[project]
name = "ToScAna_test"
version = "0.0.1"
authors = [
  { name="Gabriel Cuello", email="cuello@ill.fr" },
  { name="Jose Robledo", email="j.robledo@fz-juelich.de"},
]

description = "Total Scattering Analisis"
readme = "readme.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.24.0",
    "scipy",
    "lmfit",
    "h5py",
    "ipympl"
]

[tool.setuptools]
py-modules = ['toscana']

[project.urls]
Homepage = "https://github.com/jorobledo/toscana"
Issues = "https://github.com/jorobledo/toscana/issues"